--- a/CarsStore.Web/CarsStore.Web.csproj
+++ b/CarsStore.Web/CarsStore.Web.csproj
@@ -246,6 +246,8 @@
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
@@ -294,6 +296,7 @@
     <Content Include="Views\Users\Edit.cshtml" />
     <Content Include="Views\Offers\AddOffer.cshtml" />
     <Content Include="Views\Shared\OfferImage.cshtml" />
+    <Content Include="Views\Home\GetAll.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
