--- a/CarsStore.Web/CarsStore.Web.csproj
+++ b/CarsStore.Web/CarsStore.Web.csproj
@@ -221,6 +221,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\bootstrap-def.css" />
     <Content Include="Content\bootstrap-def.min.css" />
+    <Content Include="Scripts\custom-js.js" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
